Delete leaderboard entry added.
