# src/main/java/dev/agustinventura/leaderboard/application/model/exceptions/LeaderboardEntryDeleteNotAllowedException.java
@@ -1,0 +1,8 @@
+package dev.agustinventura.leaderboard.application.model.exceptions;
+
+public class LeaderboardEntryDeleteNotAllowedException extends RuntimeException {
+
+  public LeaderboardEntryDeleteNotAllowedException(String message) {
+    super(message);
+  }
+}
