# src/main/resources/static/api.yml
@@ -59,7 +59,33 @@ paths:
           description: Invalid leaderboard entry data
         404:
           description: Leaderboard entry not found
-
+  /v1/leaderboard/entry/{playerName}:
+    delete:
+      operationId: deleteLeaderboardEntry
+      summary: Delete a leaderboard entry
+      tags:
+        - Leaderboard
+      parameters:
+        - name: playerName
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The playerName of the leaderboard entry to delete.
+        - name: X-USERNAME
+          in: header
+          required: true
+          schema:
+            type: string
+          description: >
+            Username making the request. Must match the `playerName` being deleted or be `admin`.
+      responses:
+        204:
+          description: Leaderboard entry deleted successfully
+        401:
+          description: Unauthorized - Blank X-USERNAME
+        403:
+          description: Forbidden - X-USERNAME does not match the playerName or `admin`
 components:
   schemas:
     LeaderboardEntry:
